--- a/LAB5/LAB5.vcxproj.filters
+++ b/LAB5/LAB5.vcxproj.filters
@@ -15,87 +15,87 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Header Files\Inheritance\Person.h">
+    <ClInclude Include="Inheritance\Person.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Header Files\Inheritance\Student.h">
+    <ClInclude Include="Inheritance\Student.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Header Files\Inheritance\Teacher.h">
+    <ClInclude Include="Inheritance\Teacher.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Header Files\Inheritance\DemoInheritence.h">
+    <ClInclude Include="Inheritance\DemoInheritence.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Header Files\RefactoringBaseClass\Post.h">
+    <ClInclude Include="RefactoringBaseClass\Post.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Header Files\RefactoringBaseClass\User.h">
+    <ClInclude Include="RefactoringBaseClass\User.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Header Files\RefactoringBaseClass\PaidUser.h">
+    <ClInclude Include="RefactoringBaseClass\PaidUser.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Header Files\RefactoringBaseClass\Login.h">
+    <ClInclude Include="RefactoringBaseClass\Login.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Header Files\Polymorphism\Product.h">
+    <ClInclude Include="Polymorphism\Product.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Header Files\Polymorphism\DiscountBase.h">
+    <ClInclude Include="Polymorphism\DiscountBase.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Header Files\Polymorphism\PercentDiscount.h">
+    <ClInclude Include="Polymorphism\PercentDiscount.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Header Files\Polymorphism\CertificateDiscount.h">
+    <ClInclude Include="Polymorphism\CertificateDiscount.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Header Files\Polymorphism\5.3.h">
+    <ClInclude Include="Polymorphism\5.3.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Resource Files\Inheritance\Person.cpp">
+    <ClCompile Include="Inheritance\Person.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Resource Files\Inheritance\Student.cpp">
+    <ClCompile Include="Inheritance\Student.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Resource Files\Inheritance\Teacher.cpp">
+    <ClCompile Include="Inheritance\Teacher.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Resource Files\Main.cpp">
+    <ClCompile Include="Main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Resource Files\Inheritance\DemoInheritence.cpp">
+    <ClCompile Include="Inheritance\DemoInheritence.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Resource Files\RefactoringBaseClass\Post.cpp">
+    <ClCompile Include="RefactoringBaseClass\Post.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Resource Files\RefactoringBaseClass\User.cpp">
+    <ClCompile Include="RefactoringBaseClass\User.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Resource Files\RefactoringBaseClass\PaidUser.cpp">
+    <ClCompile Include="RefactoringBaseClass\PaidUser.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Resource Files\RefactoringBaseClass\Login.cpp">
+    <ClCompile Include="RefactoringBaseClass\Login.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Resource Files\Polymorphism\Product.cpp">
+    <ClCompile Include="Polymorphism\Product.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Resource Files\Polymorphism\DiscountBase.cpp">
+    <ClCompile Include="Polymorphism\DiscountBase.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Resource Files\Polymorphism\PercentDiscount.cpp">
+    <ClCompile Include="Polymorphism\PercentDiscount.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Resource Files\Polymorphism\CertificateDiscount.cpp">
+    <ClCompile Include="Polymorphism\CertificateDiscount.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Resource Files\Polymorphism\5.3.cpp">
+    <ClCompile Include="Polymorphism\5.3.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
